log
ju., 27 de mar. de 2025 16:23:18: 
 list.c | 32 ++++++++++++++++++++++++--------
 1 file changed, 24 insertions(+), 8 deletions(-)
 tests:  9|3
total_score: 35/70
25021aa
ju., 27 de mar. de 2025 16:28:38: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
29e08c2
ju., 27 de mar. de 2025 16:38:48: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  11|1
total_score: 55/70
4710da6
ju., 27 de mar. de 2025 16:47:58: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
84b9198
ju., 27 de mar. de 2025 16:50:22: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:115:11: error: unused variable 'data' [-Werror=unused-variable]
     void *data = actual->data;
           ^~~~
list.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e05577f
